--- a/sito.html
+++ b/sito.html
@@ -3,104 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serate in Oratorio - Giochi Scout</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>Scout Brescia - Serate in Oratorio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="sito.css">
+    <link rel="icon" href="images/brescia11.jpg">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">Scout Oratorio</div>
-            <div class="nav-links">
-                <a href="#chi-siamo">Chi Siamo</a>
-                <a href="#attivita">Attività</a>
-                <a href="#orari">Orari</a>
-                <a href="#contatti">Contatti</a>
-            </div>
-        </nav>
-    </header>
-
     <section class="hero">
         <div class="hero-content">
-            <h1>Serate di Giochi in Oratorio</h1>
-            <p>Unisciti a noi per serate indimenticabili di divertimento, amicizia e scoperta</p>
-            <a href="#contatti" class="cta-button">Partecipa Ora</a>
+            <h1>Serate Scout in Oratorio</h1>
+            <p>Divertimento, Amicizia e Crescita Personale per Ragazzi</p>
         </div>
     </section>
 
-    <section id="chi-siamo">
-        <h2 class="section-title">Chi Siamo</h2>
-        <div class="features">
-            <div class="feature-card">
-                <i class="fas fa-users"></i>
-                <h3>Comunità</h3>
-                <p>Un gruppo scout appassionato che crede nel valore dell'incontro e della condivisione attraverso il gioco.</p>
+    <section id="attivita" class="section container">
+        <h2 class="section-title">LE NOSTRE PROPOSTE</h2>
+        <div class="activities">
+            <div class="activity-card">
+                <h3>GIOCHI DA TAVOLO</h3>
+                <p>Sviluppiamo strategia, logica e collaborazione attraverso giochi di società e ruolo.</p>
             </div>
-            <div class="feature-card">
-                <i class="fas fa-heart"></i>
-                <h3>Accoglienza</h3>
-                <p>Le nostre serate sono aperte a tutti, senza distinzioni. Ogni persona è benvenuta!</p>
+            <div class="activity-card">
+                <h3>GIOCHI DI SQUADRA</h3>
+                <p>Promuoviamo il lavoro di gruppo, la comunicazione e lo spirito di collaborazione.</p>
             </div>
-            <div class="feature-card">
-                <i class="fas fa-star"></i>
-                <h3>Esperienza</h3>
-                <p>Anni di esperienza nell'organizzazione di attività educative e ricreative per giovani e adulti.</p>
+            <div class="activity-card">
+                <h3>Attività Educative</h3>
+                <p>Percorsi di crescita personale che stimolano la creatività e le capacità individuali.</p>
             </div>
         </div>
     </section>
 
-    <section id="attivita" class="schedule">
-        <h2 class="section-title">LE NOSTRE ATTIVITA</h2>
-        <div class="schedule-grid">
-            <div class="schedule-item">
-                <h3>Giochi di Squadra</h3>
-                <p>Attività che favoriscono la collaborazione e il lavoro di gruppo, perfette per conoscersi divertendosi.</p>
+    <section id="dove-trovarci" class="section container">
+        <h2 class="section-title">DOVE TROVARCI</h2>
+        <div class="location-info">
+            <div class="location-card">
+                <h3>Indirizzo</h3>
+                <p>Parrocchia di San Francesco Da Paola, Via Benacense, 27, 25123 Brescia BS<br>
+                <br>
+                </p>
             </div>
-            <div class="schedule-item">
-                <h3>Giochi da Tavolo</h3>
-                <p>Una vasta selezione di giochi da tavolo moderni e classici per tutti i gusti.</p>
+            <div class="location-card">
+                <h3>Orari Attività</h3>
+                <p>
+                    ogni tot<br>
+                    Ore ancora da definire<br>
+                </p>
             </div>
-            <div class="schedule-item">
-                <h3>Sfide Creative</h3>
-                <p>Attività che stimolano la creatività e l'ingegno attraverso quiz e prove di abilità.</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="orari">
-        <h2 class="section-title">Quando Trovarci</h2>
-        <div class="schedule-grid">
-            <div class="schedule-item">
-                <h3>Orari</h3>
-                <p>Ogni venerdì sera dalle 21:00 alle 23:30</p>
-                <p>Sabato pomeriggio dalle 15:00 alle 18:00</p>
-            </div>
-            <div class="schedule-item">
-                <h3>Dove Siamo</h3>
-                <p>Oratorio San Giovanni Bosco</p>
-                <p>Via dell'Oratorio, 1</p>
-                <p>La struttura è facilmente raggiungibile con i mezzi pubblici</p>
-                <center><button><a href="https://www.google.com/maps">Vai a google maps</a></button></center>
+            <div class="location-card">
+                <h3>Contatti</h3>
+                <p>
+                    Email: cozziluca1@gmail.com<br>
+                    Telefono: +39 371 425 3750<br>
+                    Referente: 
+                </p>
             </div>
         </div>
     </section>
 
-    <section id="contatti">
-        <h2 class="section-title">Contattaci</h2>
-        <div class="contact-info">
-            <p>Per maggiori informazioni:</p>
-            <p>Email: Cozziluca1@gmail.com</p>
-            <p>Tel: 39- </p>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
-            </div>
+    <section class="experience">
+        <div class="container experience-content">
+            <h2 class="section-title" style="color: white;">La Nostra Esperienza</h2>
+            <p>Noi del Bs11 abbiamo maturato una profonda esperienza nell'organizzazione di attività coinvolgenti e formative. Il nostro obiettivo è creare un ambiente accogliente dove i giovani possano crescere, divertirsi e sviluppare importanti competenze di vita.</p>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 Scout Oratorio - Tutti i diritti riservati</p>
+        <p>© 2025 BS11. Tutti i diritti riservati.</p>
     </footer>
 </body>
 </html>
