--- a/sito_principale.html
+++ b/sito_principale.html
@@ -6,6 +6,7 @@
     <title>Noviziato BS11 | Strada, Comunità, Servizio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="sito_principale.css">
+    <link rel="icon" href="images/brescia11.jpg">
 </head>
 <body>
     <header class="header">
@@ -212,7 +213,7 @@
                         const message = document.getElementById('message').value;
                         
                         // Prepare email body
-                        const emailBody = `
+                        const emailBody = ` 
                     Nome: ${name}
                     Email: ${email}
                     Oggetto: ${subject}
