--- a/sito.html
+++ b/sito.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scout Brescia - Serate in Oratorio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="sito.css">
-    <link rel="icon" href="images/brescia11.jpg">
+    <link rel="stylesheet" href="css/sito.css">
+    <link rel="icon" href="assets/logo.jpg">
 </head>
 <body>
     <section class="hero">
         <div class="hero-content">
             <h1>Serate Scout in Oratorio</h1>
             <p>Divertimento, Amicizia e Crescita Personale per Ragazzi</p>
+            <a href="assets/"
         </div>
     </section> 
 
