--- a/sito_principale.html
+++ b/sito_principale.html
@@ -258,9 +258,12 @@
         </iframe>
     </div>
 </div>
+
             </section>
-    
         </main>
+        <footer>
+            <p>© 2025 BS11. Tutti i diritti riservati.</p>
+        </footer>
     </body>
     <script>
         document.getElementById('hamburger').addEventListener('click', function() {
