--- a/sito.html
+++ b/sito.html
@@ -1,72 +1,61 @@
 <!DOCTYPE html>
-<html lang="it"> 
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scout Brescia - Serate in Oratorio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/sito.css">
-    <link rel="icon" href="assets/logo.jpg">
 </head>
 <body>
-    <section class="hero">
+    <a href="sito_principale.html" class="back-button">← Torna al Sito Principale</a>
+      <section class="hero">
         <div class="hero-content">
             <h1>Serate Scout in Oratorio</h1>
             <p>Divertimento, Amicizia e Crescita Personale per Ragazzi</p>
-            <a href="assets/"
+            <a href="#attivita" class="cta-button">Scopri di Più</a>
         </div>
-    </section> 
+    </section>
 
-    <section id="attivita" class="section container">
-        <h2 class="section-title">LE NOSTRE PROPOSTE</h2>
-        <div class="activities">
-            <div class="activity-card">
-                <h3>GIOCHI DA TAVOLO</h3>
-                <p>Sviluppiamo strategia, logica e collaborazione attraverso giochi di società e ruolo.</p>
+    <section id="attivita" class="section">
+        <h2 class="section-title">Le Nostre Proposte</h2>
+        <div class="mobile-grid">
+            <div class="mobile-card">
+                <h3>Giochi da Tavolo</h3>
+                <p>Sviluppiamo strategia e collaborazione.</p>
             </div>
-            <div class="activity-card">
-                <h3>GIOCHI DI SQUADRA</h3>
-                <p>Promuoviamo il lavoro di gruppo, la comunicazione e lo spirito di collaborazione.</p>
+            <div class="mobile-card">
+                <h3>Giochi di Squadra</h3>
+                <p>Promuoviamo lavoro di gruppo.</p>
             </div>
-            <div class="activity-card">
+            <div class="mobile-card">
                 <h3>Attività Educative</h3>
-                <p>Percorsi di crescita personale che stimolano la creatività e le capacità individuali.</p>
+                <p>Stimoliamo creatività individuale.</p>
             </div>
         </div>
     </section>
 
-    <section id="dove-trovarci" class="section container">
-        <h2 class="section-title">DOVE TROVARCI</h2>
-        <div class="location-info">
-            <div class="location-card">
+    <section id="dove-trovarci" class="section">
+        <h2 class="section-title">Dove Trovarci</h2>
+        <div class="mobile-grid">
+            <div class="mobile-card location-card">
                 <h3>Indirizzo</h3>
-                <p>Parrocchia di San Francesco Da Paola, Via Benacense, 27, 25123 Brescia BS<br>
-                <br>
-                </p>
+                <p>Parrocchia San Francesco Da Paola<br>Via Benacense, 27<br>25123 Brescia BS</p>
             </div>
-            <div class="location-card">
+            <div class="mobile-card location-card">
                 <h3>Orari Attività</h3>
-                <p>
-                    ogni tot<br>
-                    Ore ancora da definire<br>
-                </p>
+                <p>Ogni Settimana<br>Orari in Definizione</p>
             </div>
-            <div class="location-card">
+            <div class="mobile-card location-card">
                 <h3>Contatti</h3>
-                <p>
-                    Email: cozziluca1@gmail.com<br>
-                    Telefono: +39 371 425 3750<br>
-                    Referente: 
-                </p>
+                <p>Email: cozziluca1@gmail.com<br>Tel: +39 371 425 3750</p>
             </div>
         </div>
     </section>
 
-    <section class="experience">
-        <div class="container experience-content">
-            <h2 class="section-title" style="color: white;">La Nostra Esperienza</h2>
-            <p>Noi del Bs11 abbiamo maturato una profonda esperienza nell'organizzazione di attività coinvolgenti e formative. Il nostro obiettivo è creare un ambiente accogliente dove i giovani possano crescere, divertirsi e sviluppare importanti competenze di vita.</p>
-        </div>
+    <section class="section experience">
+        <h2 class="section-title" style="color: white;">La Nostra Esperienza</h2>
+        <p>Noi del Bs11 abbiamo maturato una profonda esperienza nell'organizzazione di attività coinvolgenti e formative.</p>
     </section>
 
     <footer>
