--- a/sito.html
+++ b/sito.html
@@ -48,7 +48,7 @@
             </div>
             <div class="mobile-card location-card">
                 <h3>Contatti</h3>
-                <p>Email: cozziluca1@gmail.com<br>Tel: +39 371 425 3750</p>
+                <p>Email: noviziatobs11@gmail.com<br>Tel: +39 371 425 3750</p>
             </div>
         </div>
     </section>
