--- a/Route_invernale.html
+++ b/Route_invernale.html
@@ -14,7 +14,7 @@
     <header class="scout-green text-white py-8 shadow-lg">
         <div class="container mx-auto px-4">
             <h1 class="header-title font-bold text-center text-4xl md:text-5xl">Route Invernale 2025</h1>
-            <p class="header-subtitle text-center text-xl md:text-2xl mt-4">Un'avventura indimenticabile sulle neve</p>
+            <p class="header-subtitle text-center text-xl md:text-2xl mt-4">Un'avventura indimenticabile </p>
         </div>
     </header>
 
@@ -26,7 +26,7 @@
                 <h2 class="section-title scout-brown font-bold">L'Avventura Inizia</h2>
                 <p class="section-text">
                     Nel cuore dell'inverno 2025, il nostro gruppo scout ha intrapreso 
-                    un'emozionante route attraverso i sentieri innevati delle montagne.
+                    un'emozionante route attraverso i sentieri delle montagne.
                     Un'esperienza che ha messo alla prova il nostro spirito scout e la nostra preparazione.
                 </p>
             </div>
