--- a/sito_principale.html
+++ b/sito_principale.html
@@ -186,11 +186,16 @@
                                 <label for="subject" style="display: block; margin-bottom: 0.5rem;">Oggetto</label>
                                 <select id="subject" name="subject" required 
                                     style="width: 100%; padding: 0.8rem; border: 1px solid #ddd; border-radius: 4px;">
-                                    <option value="">Seleziona un oggetto</option>
-                                    <option value="info">Informazioni generali</option>
-                                    <option value="iscrizione">Iscrizione attività</option>
-                                    <option value="collaborazione">Proposta di collaborazione</option>
-                                    <option value="altro">Altro</option>
+                                    <option value="">
+                                        Seleziona un oggetto</option>
+                                    <option value="info">
+                                        Informazioni generali</option>
+                                    <option value="iscrizione">
+                                        Iscrizione attività</option>
+                                    <option value="collaborazione">
+                                        Proposta di collaborazione</option>
+                                    <option value="altro">
+                                        Altro</option>
                                 </select>
                             </div>
                             
