--- a/sito_principale.html
+++ b/sito_principale.html
@@ -191,7 +191,7 @@
                                     <option value="info">
                                         Informazioni generali</option>
                                     <option value="iscrizione">
-                                        Iscrizione attività</option>
+                                        Iscrizione Gruppo</option>
                                     <option value="collaborazione">
                                         Proposta di collaborazione</option>
                                     <option value="altro">
