--- a/sito_principale.html
+++ b/sito_principale.html
@@ -65,8 +65,8 @@
                 </div>
                 <div class="dashboard-card">
                     <h3><i class="fas fa-link"></i> Collegamenti Rapidi</h3>
-                    <a href="#" class="btn">Clan BS11</a>
-                    <a href="#" class="btn">AGESCI Brescia</a>
+                    <a href="https://gruppi.agesci.it/brescia11/" class="btn">BS11</a>
+                    <a href="https://lombardia.agesci.it/cose-lo-scautismo/" class="btn">AGESCI Brescia</a>
                 </div>
             </div>
         </section>
@@ -100,7 +100,7 @@
                     <h3>Canile le musee</h3>
                     <p>Servizio svolto presso il canile le Musee</p>
                     <p>Svolto il 09/02/2025</p>
-                    <a href="#" class="btn">Il canile</a>
+                    <a href="canile.html" class="btn">Il canile</a>
                 </div>
                 <div class="activity-card">
                     <h3>Prossimamente</h3>
