--- a/sito_principale.html
+++ b/sito_principale.html
@@ -121,10 +121,10 @@
                     <a href="#" class="btn">Informazioni</a>
                 </div>
                 <div class="activity-card">
-                    <h3>Capitolo</h3>
-                    <p>Data: 20 Aprile 2025</p>
-                    <p>Tema: "La nostra impronta nel mondo"</p>
-                    <a href="#" class="btn">Dettagli</a>
+                    <h3></h3>
+                    <p></p>
+                    <p></p>
+                    <a href="#" class="btn"></a>
                 </div>
             </div>
         </section>
