--- a/sito.html
+++ b/sito.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/sito.css">
 </head>
 <body>
-    <a href="sito_principale.html" class="back-button">← Torna al Sito Principale</a>
+    <a href="index.html" class="back-button">← Torna al Sito Principale</a>
       <section class="hero">
         <div class="hero-content">
             <h1>Serate Scout in Oratorio</h1>
