--- a/Route_invernale.html
+++ b/Route_invernale.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/Route_invernale.css">
 </head>
 <body class="bg-gray-100">
-    <a href="index.html" class="inline-block bg-gradient-to-r from-green-500 to-blue-500 text-white px-6 py-3 rounded-full font-bold shadow-lg hover:shadow-xl hover:opacity-90 transition-all duration-300 text-lg mb-4">
+    <a href="sito_principale.html" class="inline-block bg-gradient-to-r from-green-500 to-blue-500 text-white px-6 py-3 rounded-full font-bold shadow-lg hover:shadow-xl hover:opacity-90 transition-all duration-300 text-lg mb-4">
         ← Torna
     </a>
 
