--- a/canile.html
+++ b/canile.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servizio Scout al Canile Le Musee</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/canile.css">
 </head>
 <body>
-    <a href="index.html" class="inline-block bg-gradient-to-r from-green-500 to-blue-500 text-white px-6 py-3 rounded-full font-bold shadow-lg hover:shadow-xl hover:opacity-90 transition-all duration-300 text-lg mb-4">
-        ← Torna al Sito Principale
+    <a href="index.html" class="home-button">
+        <i class="fas fa-arrow-left"></i> Torna al Sito Principale
     </a>
+    
     <header class="header">
         <h1>IL NOSTRO SERVIZIO ALLE MUSEE</h1>
         <p>Una giornata di servizio dedicata ai nostri amici a quattro zampe</p>
@@ -65,10 +67,34 @@
                 <p>Il canile Le Musee ha una lunga storia di dedizione e amore verso gli animali. La struttura si impegna quotidianamente nell'accoglienza, nella cura e nella ricerca di nuove famiglie per i suoi ospiti.</p>
             </div>
         </section>
+
+        <section class="social-section">
+            <h2>Seguici su Instagram</h2>
+            <div class="instagram-container">
+                <div class="instagram-header">
+                    <img src="assets/logo.png" alt="Profilo Instagram">
+                    <span class="username">noviziato.wanderlust_bs11 </span>
+                </div>
+                <div class="instagram-content">
+                    <img src="assets/canile-ari.png" alt="Post Instagram del Servizio al Canile">
+                </div>
+                <div class="instagram-actions">
+                    <i class="far fa-heart"></i>
+                    <i class="far fa-comment"></i>
+                    <i class="far fa-paper-plane"></i>
+                </div>
+                <div class="instagram-caption">
+                    <strong>noviziato.wanderlust_bs11</strong> Giornata di servizio al canile Le Musee! Orgogliosi di aver contribuito al benessere dei nostri amici a quattro zampe 🐕 #ScoutInAzione #Servizio #CanileLeMusee
+                </div>
+            </div>
+            <a href="https://www.instagram.com/p/DF4t_DXN1iU/" class="instagram-link" target="_blank">
+                <i class="fab fa-instagram"></i> Visita il nostro Instagram
+            </a>
+        </section>
     </main>
 
-        <footer class="fotter">
-            <p>© 2025 BS11. Tutti i diritti riservati.</p>
-        </footer>
+    <footer>
+        <p>© 2025 BS11. Tutti i diritti riservati.</p>
+    </footer>
 </body>
 </html>
