--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <i class="fas fa-campground"></i>
                 </div>
                 <h3>Camminata a Conche</h3>
-                <p>L'avventura che conclude il nostro anno di Noviziato</p>
+                <p>Una camminata stupenda e la scoperta dell ignoto</p>
                 <p class="strada-date">Luglio 2025</p>
                 <a href="camminataConche.html" class="btn strada-btn">Foto e racconti</a>
             </div>
