--- a/camminataConche.html
+++ b/camminataConche.html
@@ -87,7 +87,7 @@
                     <i class="far fa-paper-plane"></i>
                 </div>
                 <div class="instagram-caption">
-                    <strong>noviziato.wanderlust_bs11</strong> Giornata di servizio al canile Le Musee! Orgogliosi di aver contribuito al benessere dei nostri amici a quattro zampe 🐕 #ScoutInAzione #Servizio #CanileLeMusee
+                    <strong>noviziato.wanderlust_bs11</strong> Giornata fantastica all isegna della scoperta e della conoscienza fra i membri del noviziato
                 </div>
             </div>
             <br>
